Fix scrolls to anchors with visible highlight bar

--- a/resources/sass/_faq.scss
+++ b/resources/sass/_faq.scss
@@ -66,3 +66,12 @@
     }
   }
 }
+
+.hasHighlightBar .faq::before {
+  display: block;
+  content: "";
+  margin-top: -60px;
+  height: 60px;
+  visibility: hidden;
+  pointer-events: none;
+}
